# coffeebase_web

./: .gitignore  README.md  app.py  pyproject.toml
website/: .env  firebase.py  views.py
website/static/css/: style.css
website/static/js/: animation.js  script.js  style-script.js
website/templates/: base.html
